feat: add Swagger
