# app/Http/Controllers/Api/v1/Auth/AuthController.php
@@ -10,10 +10,50 @@ use Illuminate\Http\Client\Request;
 use Illuminate\Support\Facades\Hash;
 use Symfony\Component\HttpFoundation\Response;
 
+/**
+ * @OA\Info(
+ *     title="Your API Title",
+ *     version="1.0.0",
+ *     description="Description of your API",
+ *     @OA\Contact(
+ *         email="contact@example.com"
+ *     ),
+ *     @OA\License(
+ *         name="MIT License",
+ *         url="https://opensource.org/licenses/MIT"
+ *     )
+ * )
+ */
 class AuthController extends Controller
 {
 
-
+    /**
+     * @OA\Post(
+     *     path="/api/v1/auth/login",
+     *     tags={"Auth"},
+     *     summary="Login user",
+     *     description="Authenticate user and return JWT token",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(ref="#/components/schemas/LoginRequest")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="data", type="object", ref="#/components/schemas/User"),
+     *             @OA\Property(property="token", type="string", example="Bearer eyJhbGciOiJIUzI1NiIsIn...")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid username or password",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Invalid username or password")
+     *         )
+     *     )
+     * )
+     */
     public function login(LoginRequest $request)
     {
         $credentials = $request->only(['email', 'password']);
@@ -33,7 +73,7 @@ class AuthController extends Controller
 
         return response()->json([
             'data' =>  $user,
-            'token' =>  $token
+            'token' =>  "Bearer {$token}"
         ]);
     }
 
